--- a/TheWorld/wwwroot/index.html
+++ b/TheWorld/wwwroot/index.html
@@ -117,7 +117,7 @@
             <section id="contact" class="contact__container"></section>
         </main>
     
-        <footer id="footer" class="footer">&copy; 2017 - Jacob Larsen.</footer>
+        <footer id="footer" class="footer">&copy; 2017 - Jacob Larsen... Test2.</footer>
 </body>
     
 </html>
