Connected links from Learning Section to their respective JavaScript, tabnav components down in the Projects Section

--- a/TheWorld/wwwroot/index.html
+++ b/TheWorld/wwwroot/index.html
@@ -52,7 +52,7 @@
                                 Frontend Development
                             </div>
                         <div id="fig__caption1" class="fig__caption">
-                            Since December, 2016 I've been diving into some of the main frontend technologies, such as HTML5, CSS3, JavaScript, and jQuery. I've also been studying UX/UI topics to better understand web-development from a user perspective. You can see more of my front-end work on the <span id="frontend__link" class="projects__link"><a href="#projects">Projects Page.</a></span>
+                            Since December, 2016 I've been diving into some of the main frontend technologies, such as HTML5, CSS3, JavaScript, and jQuery. I've also been studying UX/UI topics to better understand web-development from a user perspective. You can see more of my front-end work in the <span id="frontend__link" class="projects__link" onclick="openProjects('FProjects')"><a href="#projects">Projects Section.</a></span>
                         </div>
                     </div>
                     <div id="pic1__wrap" class="pic__wrap pic1">
@@ -67,7 +67,7 @@
                             Backend Development
                         </div>
                         <div id="fig__caption2" class="fig__caption">
-                            Since February, 2017 I've been working a bit in C# and Python using sites like Udacity, Pluralsight, Udemy, Coursera, and the MIT Open Courseware. Currently I'm working through the C# path on Pluralsight. Click <span id="backend__link" class="projects__link"><a href="#projects">here</a></span> to see more.
+                            Since February, 2017 I've been working a bit in C# and Python using sites like Udacity, Pluralsight, Udemy, Coursera, and the MIT Open Courseware. Currently I'm working through the C# path on Pluralsight. Click <span id="backend__link" class="projects__link" onclick="openProjects('BProjects')"><a href="#projects">here</a></span> to see more.
                         </div>
                         </div>
                     <div id="pic2__wrap" class="pic__wrap pic2">
@@ -82,7 +82,7 @@
                             Design, Graphics, and Art
                         </div>
                         <div id="fig__caption3" class="fig__caption">
-                            I've always had a passion for all things creative, whether it be logo and graphic design, experience design, photo-editing, abstract-realistic drawing/painting, or architecture of both physical and digital space. Check out some of my work on the <span id="design__link" class="projects__link"><a href="#projects">Projects Page.</a></span>
+                            I've always had a passion for all things creative, whether it be logo and graphic design, experience design, photo-editing, abstract-realistic drawing/painting, or architecture of both physical and digital space. Check out some of my work in the <span id="design__link" class="projects__link"><a href="#projects" onclick="openProjects('DProjects')">Projects Section.</a></span>
                         </div>
                         </div>
                     <div id="pic3__wrap" class="pic3 pic__wrap">
