Added a Fitness Tracker page for a potential fitness app, where one can sign up, login, make new fitness sessions, save them into a retrievable and readable form, and edit old ones. Maybe add a search for month or dates or something to find old ones.

--- a/TheWorld/wwwroot/index.html
+++ b/TheWorld/wwwroot/index.html
@@ -28,7 +28,7 @@
                 <a href="#" class="logoa">
                     <img id="logo" class="logo" src="img/logo/logo_white.svg">
                 </a>
-                <a href="#">
+                <a href="/index.html">
                     <p id="logo__name" class="logo__name">arsen</p>
                 </a>
                 <ul id="nav__ul" class="nav__ul">
@@ -39,7 +39,7 @@
                     <li id="nav__item3" class="nav__items">
                         <a data-scroll href="#">Contact</a></li>
                     <li id="nav__item4" class="nav__items">
-                        <a data-scroll href="#">Fitness Tracker</a></li>
+                        <a data-scroll href="/fitness.html">Fitness Tracker</a></li>
                 </ul>
             </nav>
         </div>
