Added a page for The World - just a clone of the fitness page for now. Fixed a centering issue of the hero shout by changing position to relative instead of flex (whoops!) Trying to figure out dropdown navs, and will be adding the hamnav js soon.

--- a/TheWorld/wwwroot/index.html
+++ b/TheWorld/wwwroot/index.html
@@ -33,13 +33,20 @@
                 </a>
                 <ul id="nav__ul" class="nav__ul">
                     <li id="nav__item1" class="nav__items">
-                        <a data-scroll href="#learning">Learning</a></li>
+                        <a data-scroll href="#learning">Learning</a>
+                    </li>
                     <li id="nav__item2" class="nav__items">
-                        <a data-scroll href="#projects">Projects</a></li>
+                        <a data-scroll href="#projects">Projects</a>
+                    </li>
                     <li id="nav__item3" class="nav__items">
-                        <a data-scroll href="#">Contact</a></li>
+                        <a data-scroll href="#">Contact</a>
+                    </li>
                     <li id="nav__item4" class="nav__items">
-                        <a data-scroll href="/fitness.html">Fitness Tracker</a></li>
+                        <a data-scroll href="/fitness.html">Fitness Tracker</a>
+                    </li>
+                    <li id="nav__item5" class="nav__items">
+                        <a data-scroll href="/theworld.html">World App</a>
+                    </li>
                 </ul>
             </nav>
         </div>
